// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--bottom"
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--bottom"
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--bottom custom-class-name"
    style="background-color: orange;"
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--top"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--right rmd-responsive-item-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 6`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--bottom"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 7`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--left rmd-responsive-item-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 8`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--middle"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 9`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--center rmd-responsive-item-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay should apply the correct styling, HTML attributes, and allow a ref 10`] = `
<div>
  <span
    class="rmd-responsive-item-overlay rmd-responsive-item-overlay--absolute-center rmd-responsive-item-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`ResponsiveItemOverlay style utility function should be callable without any arguments 1`] = `"rmd-responsive-item-overlay rmd-responsive-item-overlay--bottom"`;
